# mpi.c

./: .gitignore  CMakeLists.txt  CMakePresets.json  CURRENTWORKS.md  DESCRIPTION.md  FUTUREWORKS.md  LICENSE  README.md  main.cpp  pyproject.toml  trace.json
agents/: test-agent.md
include/: mpi_sim.h  mpi_sim_pid.h
prototype/: main.py  task.py  trace.json  trace.py  worker.py
prototype/tasks/: task.py  task1.py  task2.py  task3.py  task4.py
prototype/tasks/e2e/fallback/: child.py
prototype/tasks/e2e/nested/: child.py
prototype/tasks/tests/: test_e2e.py
scripts/: start_py.sh
src/: mpi_sim.cpp  mpi_sim_pid.cpp  trace.cpp  trace.h
tests/: pid.sh  trace.sh
